full color change

--- a/_sass/base/_variable.scss
+++ b/_sass/base/_variable.scss
@@ -1,7 +1,7 @@
 $theme-color : #759965;
 $theme-bright : #f7f4f9;
-$theme-dark : #563d7c;
-$theme-dark2 : #443063;
+$theme-dark : #547d4b;
+$theme-dark2 : #3f6330;
 $text : rgba(0,0,0,0.8);
 $text-gray : rgba(0,0,0,0.54);
 
